Se daran comienzo a los cambios en las views

--- a/src/layouts/Gerente/Estadistica/Estadistica.html
+++ b/src/layouts/Gerente/Estadistica/Estadistica.html
@@ -16,22 +16,22 @@
         <nav class="Navigator--bar">
             <ul class="Navigator--bar List">
                 <a href="../Main/Main.html" class="Link">
-                    <Li class="List--cont"><img alt="Proveedores" src="../../../../public/images/icons/Home.png" title="Home"></Li>
+                    <Li class="List--cont"></Li>
                 </a>
                 <a href="../Inventario/Inventario.html" class="Link">
-                    <Li class="List--cont"><img alt="Inventario" src="../../../../public/images/icons/Inventario.png" title="Inventario"></Li>
+                    <Li class="List--cont"></Li>
                 </a>
                 <a href="Estadistica.html" class="Link">
-                    <Li class="List--cont"><img alt="Estadistica" src="../../../../public/images/icons/Estadistica.png" title="Estadistica"></Li>
+                    <Li class="List--cont"></Li>
                 </a>
                 <a href="../Proveedor/Proveedor.html" class="Link">
-                    <Li class="List--cont"><img alt="Proveedores" src="../../../../public/images/icons/proveedor.png" title="Proveedores"></Li>
+                    <Li class="List--cont"></Li>
                 </a>
                 <a href="../Envios/Envios.html" class="Link">
-                    <Li class="List--cont"><img alt="Envios/pedidos" src="../../../../public/images/icons/Envios.png" title="Envios/pedidos"></Li>
+                    <Li class="List--cont"></Li>
                 </a>
                 <a href="../Avisos/Avisos.html" class="Link">
-                    <Li class="List--cont"><img alt="Avisos" src="../../../../public/images/icons/Reporte.png" title="Avisos"></Li>
+                    <Li class="List--cont"></Li>
                 </a>
             </ul>
         </nav>
