--- a/src/layouts/Gerente/Inventario/Inventario.html
+++ b/src/layouts/Gerente/Inventario/Inventario.html
@@ -17,22 +17,22 @@
     <nav class="Navigator--bar">
         <ul class="Navigator--bar List">
             <a href="../Main/Main.html" class="Link">
-                <Li class="List--cont"><img alt="Proveedores" src="../../../../public/images/icons/Home.png" title="Home"></Li>
+                <Li class="List--cont"></Li>
             </a>
             <a href="Inventario.html" class="Link">
-                <Li class="List--cont"><img alt="Inventario" src="../../../../public/images/icons/Inventario.png" title="Inventario"></Li>
+                <Li class="List--cont"></Li>
             </a>
             <a href="../Estadistica/Estadistica.html" class="Link">
-                <Li class="List--cont"><img alt="Estadistica" src="../../../../public/images/icons/Estadistica.png" title="Estadistica"></Li>
+                <Li class="List--cont"></Li>
             </a>
             <a href="../Proveedor/Proveedor.html" class="Link">
-                <Li class="List--cont"><img alt="Proveedores" src="../../../../public/images/icons/proveedor.png" title="Proveedores"></Li>
+                <Li class="List--cont"></Li>
             </a>
             <a href="../Envios/Minorista/Minorista.html" class="Link">
-                <Li class="List--cont"><img alt="Envios/pedidos" src="../../../../public/images/icons/Envios.png" title="Envios/pedidos"></Li>
+                <Li class="List--cont"></Li>
             </a>
             <a href="../Avisos/Avisos.html" class="Link">
-                <Li class="List--cont"><img alt="Avisos" src="../../../../public/images/icons/Reporte.png" title="Avisos"></Li>
+                <Li class="List--cont"></Li>
             </a>
         </ul>
     </nav>
@@ -82,6 +82,58 @@
                     <tr>
                         <td>1</td>
                         <td>Ron</td>
+                        <td>bebida</td>
+                        <td>2</td>
+                        <td>2.1</td>
+                        <td>-</td>
+                        <td>2</td>
+                        <td>1.2</td>
+                        <td>35$</td>
+                        <td>40$</td>
+                        <td>2,5</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Voodka</td>
+                        <td>bebida</td>
+                        <td>2</td>
+                        <td>2.1</td>
+                        <td>-</td>
+                        <td>2</td>
+                        <td>1.2</td>
+                        <td>35$</td>
+                        <td>40$</td>
+                        <td>2,5</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Cerveza</td>
+                        <td>bebida</td>
+                        <td>2</td>
+                        <td>2.1</td>
+                        <td>-</td>
+                        <td>2</td>
+                        <td>1.2</td>
+                        <td>35$</td>
+                        <td>40$</td>
+                        <td>2,5</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Vulcana</td>
+                        <td>bebida</td>
+                        <td>2</td>
+                        <td>2.1</td>
+                        <td>-</td>
+                        <td>2</td>
+                        <td>1.2</td>
+                        <td>35$</td>
+                        <td>40$</td>
+                        <td>2,5</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Vulcana</td>
                         <td>bebida</td>
                         <td>2</td>
                         <td>2.1</td>
