--- a/src/layouts/Gerente/header-sidebar/Estilo.css
+++ b/src/layouts/Gerente/header-sidebar/Estilo.css
@@ -57,8 +57,8 @@ nav .List svg{
     padding: 3px 3px;
 }
 .List svg:hover{
-    background-color: var(--HoverColor);
+    background-color: var(--ColorNavigatorBar);
     fill: var(--PrimaryColor);
-    outline: 2px solid var(--SecondaryColor);
+    outline: 2px solid var(--PrimaryColor);
     padding: 5px 5px;
 }
