--- a/src/layouts/Gerente/Avisos/Avisos.css
+++ b/src/layouts/Gerente/Avisos/Avisos.css
@@ -142,7 +142,7 @@ main .Content .Table--Container table{
 main .Content .Table--Container table caption{
     border-radius: 5px;
     border-bottom: none;
-    font-size: 1.4em;
+    font-size: 1.2em;
     text-transform: capitalize;
     font-weight: 600;
     padding: 5px;
@@ -165,6 +165,6 @@ main .Content .Table--Container table td{
 }
 main .Content .Table--Container table tbody tr:hover{
     background-color: var(--ColorNavigatorBar);
-    color: var(--HoverColor);
+    color: var(--PrimaryColor);
 }
 
