--- a/src/layouts/Gerente/Envios/Mayorista/mayorista.css
+++ b/src/layouts/Gerente/Envios/Mayorista/mayorista.css
@@ -30,17 +30,14 @@ main .Content--page{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px;
+    padding: 15px 0;
 }
 main .Content--page .input--Container{
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 10px;
-    gap: 10px;
 }
 main .Content--page .input--Container input{
-    width: 270px;
+    width: 280px;
     padding: 7px 10px;
     font-size: 1.1em;
     font-weight: 500;
@@ -112,7 +109,7 @@ main .Table--Container table caption{
     border-radius: 5px;
     border-bottom: none;
     padding: 10px;
-    font-size: 1.5em;
+    font-size: 1.3em;
     font-weight: 700;
     letter-spacing: 1px;
     text-align: center;
@@ -132,5 +129,5 @@ main .Table--Container tbody tr{
 }
 main .Table--Container tbody tr:hover{
     background-color: var(--ColorNavigatorBar);
-    color: var(--HoverColor);
+    color: var(--PrimaryColor);
 }
