--- a/src/layouts/Gerente/Proveedor/Proveedor.html
+++ b/src/layouts/Gerente/Proveedor/Proveedor.html
@@ -58,8 +58,8 @@
                 </article>
                 <article class="Icon--proveedor">
                     <img src="../../../../public/images/icons/Añadir--white.png" alt="Agregar" title="Agregar proveedor" id="Agregar">
-                    <img src="../../../../public/images/icons/Eliminar--white.png" alt="Eliminar" title="Eliminar proveedor" id="Eliminar">
                     <img src="../../../../public/images/icons/Pencil--white.png" alt="Modificar" title="Modificar proveedor" id="Modificar">
+                    <img src="../../../../public/images/icons/Eliminar--white.png" alt="Eliminar" title="Eliminar proveedor" id="Eliminar">
                 </article>
             </section>
             <section class="Table--Container">
@@ -80,7 +80,6 @@
                             <th>Ubicación</th>
                             <th>Fecha de Compra</th>
                             <th>Fecha de Entrega</th>
-                            <th>USER</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -92,7 +91,6 @@
                             <td>Naguanagua</td>
                             <td>12/03/2024</td>
                             <td>20/03/2024</td>
-                            <td>Jose</td>
                         </tr>
                         <tr>
                             <td>2</td>
@@ -102,7 +100,7 @@
                             <td>Naguanagua</td>
                             <td>12/03/2024</td>
                             <td>20/03/2024</td>
-                            <td>Jose</td>
+                            
                         </tr>
                         <tr>
                             <td>3</td>
@@ -112,7 +110,7 @@
                             <td>Naguanagua</td>
                             <td>12/03/2024</td>
                             <td>20/03/2024</td>
-                            <td>Jose</td>
+                            
                         </tr>
                         <tr>
                             <td>4</td>
@@ -122,14 +120,14 @@
                             <td>Naguanagua</td>
                             <td>12/03/2024</td>
                             <td>20/03/2024</td>
-                            <td>Jose</td>
+                            
                         </tr>
                     </tbody>
                 </table>
             </section>
         </div>
         <dialog id="dialog--1">
-            <span>X</span>
+            <span id="CerrarAgregar">X</span>
             <h2>Agregar Proveedor</h2>
             <form>
                 <div class="Input--Container">
@@ -153,15 +151,79 @@
                     </div>
                 </div>
                 <div class="Input--Container">
-                    <label for="Ubicación">Ubicación del Proveedor</label>
-                    <input placeholder="Ingrese la ubcación del proveedor" required id="Ubicación">
+                    <div>
+                        <label for="Ubicación">Ubicación del Proveedor</label>
+                        <input placeholder="Ingrese la ubcación del proveedor" required id="Ubicación">
+                    </div>
+                    <div>
+                        <label for="Telefono">Telefono del proveedor</label>
+                        <input placeholder="Ingrese el telefono del proveedor" required id="Telefono">
+                    </div>
                 </div>
                 <div class="Input--Container">
                     <div>
-                        <label>Fecha de Entrega</label>
-                        <input type="date">
+                        <label for="Fecha--compra">Fecha de compra</label>
+                        <input type="date" id="Fecha--compra" required>
+                    </div>
+                    <div>
+                        <label for="Fecha--entrega">Fecha de entrega</label>
+                        <input type="date" id="Fecha--entrega" required>
                     </div>
                 </div>
+                <button type="submit" id="SubmitAgregar">Agregar</button>
+            </form>
+        </dialog>
+        <dialog id="dialog--2">
+            <span id="CerrarModificar">X</span>
+            <h2>Modificar Proveedor</h2>
+            <form>
+                <div class="Input--Container">
+                    <div>
+                        <label for="ID">Id</label>
+                        <input placeholder="Ingrese el id del proveedor que quiere modificar" required id="ID--proveedor">
+                    </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="Nombre--proveedor">Nombre del Proveedor</label>
+                        <input placeholder="Ingrese el nombre del proveedor" required id="Nombre--proveedor">
+                    </div>
+                    <div>
+                        <label for="Apellido--proveedor">Apellido del Proveedor</label>
+                        <input placeholder="Ingrese el apellido del proveedor" required id="Apellido--proveedor">
+                    </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="RIF">RIF</label>
+                        <input placeholder="Ingrese el RIF del proveedor" required id="RIF">
+                    </div>
+                    <div>
+                        <label for="Bebida">Producto del Proveedor</label>
+                        <input placeholder="Ingrese el producto que vended el proveedor" required id="Bebida">
+                    </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="Ubicación">Ubicación del Proveedor</label>
+                        <input placeholder="Ingrese la ubcación del proveedor" required id="Ubicación">
+                    </div>
+                    <div>
+                        <label for="Telefono">Telefono del proveedor</label>
+                        <input placeholder="Ingrese el telefono del proveedor" required id="Telefono">
+                    </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="Fecha--compra">Fecha de compra</label>
+                        <input type="date" id="Fecha--compra" required>
+                    </div>
+                    <div>
+                        <label for="Fecha--entrega">Fecha de entrega</label>
+                        <input type="date" id="Fecha--entrega" required>
+                    </div>
+                </div>
+                <button type="submit" id="SubmitModificar">Modificar</button>
             </form>
         </dialog>
     </main>
