--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -42,7 +42,6 @@
                 <div class="Hora--avisos">12:12 PM</div>
                 <div class="Fecha--avisos">12/09/2024</div>
             </div>
-            <div class="Panel">
                 <table>
                     <caption>Avisos</caption>
                     <tr>
@@ -66,92 +65,93 @@
                         <td>12/08/2024</td>
                     </tr>
                 </table>
-            </div>
         </section>
-
-        <section class="panel--Estadistica">
-            <div class="Content--panel--Estadistica">
-                <h3>Estadistica</h3>
-                <div class="Container--Estadisitca__1">
-                    <article class="Historia--Ventas">Historia de ventas</article>
-                    <article class="Ventas--container">
-                        <span>
-                            100
-                            <div class="Title">Ventas</div>
-                        </span>
-                    </article>
-                </div>
-
-                <div class="Container--Estadistica__2">
-                    <article class="Ingresos--Container">
-                        <span>
-                            10.000
-                            <div class="Title">Ingresos</div>
-                        </span>
-                    </article>
-                    <article class="Egresos--Container">
-                        <span>
-                            10.000
-                            <div class="Title">Egresos</div>
-                        </span>
-                    </article>
-                </div>
-
-                <article class="Grafica--Estadistica">
-                    grafica
-                    <!--Implementacion de Chartsjs-->
-                </article>
-            </div>
-        </section>
-
-        <section class="Panel--pedidos">
-            <article class="Pedidos">
-                <h3>Pedidos</h3> 
-            </article>
-            <div class="Container--pedidos">
-                <div class="Container--1">
-                    <article class="Solicitudes--container">
-                        <span>
-                            100
-                            <div class="Title">Solicitudes</div>
-                        </span>
-                    </article>
-                    <article class="Procesados--Container">
-                        <span>
-                            100
-                            <div class="Title">Procesados</div>
-                        </span>
-                    </article>
-                    <article class="Envios--Regionales">
-                        <span>
-                            Envios Regionales
-                            <div class="Title">100</div>
-                        </span>
-                    </article>
-                </div>
+        <div class="Content">
+            <section class="panel--Estadistica">
+                <div class="Content--panel--Estadistica">
+                    <h3>Estadistica</h3>
+                    <div class="Container--Estadisitca__1">
+                        <article class="Historia--Ventas">Historia de ventas</article>
+                        <article class="Ventas--container">
+                            <span>
+                                100
+                                <div class="Title">Ventas</div>
+                            </span>
+                        </article>
+                    </div>
     
-                <div class="Container--2">
-                    <articl class="Via--container">
-                        <span>
-                            100
-                            <div class="Title">En via</div>
-                        </span>
-                    </articl>
-                    <article class="Completados--Container">
-                        <span>
-                            100
-                            <div class="Title">Completados</div>
-                        </span>
-                    </article>
-                    <article class="Envios--Nacionales">
-                        <span>
-                            Envios Nacionales
-                            <div class="Title">100</div>
-                        </span>
+                    <div class="Container--Estadistica__2">
+                        <article class="Ingresos--Container">
+                            <span>
+                                10.000
+                                <div class="Title">Ingresos</div>
+                            </span>
+                        </article>
+                        <article class="Egresos--Container">
+                            <span>
+                                10.000
+                                <div class="Title">Egresos</div>
+                            </span>
+                        </article>
+                    </div>
+    
+                    <article class="Grafica--Estadistica">
+                        grafica
+                        <!--Implementacion de Chartsjs-->
                     </article>
                 </div>
-            </div>
-        </section>
+            </section>
+    
+            <section class="Panel--pedidos">
+                <article class="Pedidos">
+                    <h3>Pedidos</h3> 
+                </article>
+                <div class="Container--pedidos">
+                    <div class="Container--1">
+                        <article class="Solicitudes--container">
+                            <span>
+                                100
+                                <div class="Title">Solicitudes</div>
+                            </span>
+                        </article>
+                        <article class="Procesados--Container">
+                            <span>
+                                100
+                                <div class="Title">Procesados</div>
+                            </span>
+                        </article>
+                        <article class="Envios--Regionales">
+                            <span>
+                                Envios Regionales
+                                <div class="Title">100</div>
+                            </span>
+                        </article>
+                    </div>
+        
+                    <div class="Container--2">
+                        <articl class="Via--container">
+                            <span>
+                                100
+                                <div class="Title">En via</div>
+                            </span>
+                        </articl>
+                        <article class="Completados--Container">
+                            <span>
+                                100
+                                <div class="Title">Completados</div>
+                            </span>
+                        </article>
+                        <article class="Envios--Nacionales">
+                            <span>
+                                Envios Nacionales
+                                <div class="Title">100</div>
+                            </span>
+                        </article>
+                    </div>
+                </div>
+            </section>
+        </div>
+        
     </main>
 </body>
 </html>
