bg changes to div

--- a/src/layouts/Landing/Main/index.html
+++ b/src/layouts/Landing/Main/index.html
@@ -109,11 +109,12 @@
     </aside>
 
     <main>
-        <img id="background" src="../../../../public/images/background/bg.png">
-        <h1>Drinkers</h1>
-        <p>
+        <div id="background-main">
+        <h1>DRINKERS</h1>
+        <p id="slogan">
             El elixir perfecto, la entrega perfecta
         </p>
+        </div>
     </main>
 
     <footer>
