fixing aside menu bug when you scroll down

--- a/src/layouts/Landing/Main/index.html
+++ b/src/layouts/Landing/Main/index.html
@@ -115,6 +115,21 @@
             El elixir perfecto, la entrega perfecta
         </p>
         </div>
+
+        <div>
+            <section>
+                <h3></h3>
+                <div></div>
+            </section>
+            <section>
+                <h3></h3>
+                <div></div>
+            </section>
+            <section>
+                <h3></h3>
+                <div></div>
+            </section>
+        </div>
     </main>
 
     <footer>
