main page v1 finished

--- a/src/layouts/Landing/Main/index.html
+++ b/src/layouts/Landing/Main/index.html
@@ -118,17 +118,141 @@
 
         <div>
             <section>
-                <h3></h3>
-                <div></div>
+                <h3 id="subtitle">Popular en Drinkers</h3>
+                    <ul id="productSection">
+                        <li>
+                            <div id="productView">
+                                <input type="number" class="productCant">
+                                <button>Agregar</button>
+                            </div>
+                            <h4>Anis Cartujo</h4>
+                            <h5>Desde 0.00$</h3>
+                        </li>
+                        <li>
+                            <div id="productView">
+                                <input type="number" class="productCant">
+                                <button>Agregar</button>
+                            </div>
+                            <h4>Anis Cartujo</h4>
+                            <h5>Desde 0.00$</h3>
+                        </li>
+                        <li>
+                            <div id="productView">
+                                <input type="number" class="productCant">
+                                <button>Agregar</button>
+                            </div>
+                            <h4>Anis Cartujo</h4>
+                            <h5>Desde 0.00$</h3>
+                        </li>
+                        <li>
+                            <div id="productView">
+                                <input type="number" class="productCant">
+                                <button>Agregar</button>
+                            </div>
+                            <h4>Anis Cartujo</h4>
+                            <h5>Desde 0.00$</h3>
+                        </li>
+                        <li>
+                            <div id="productView">
+                                <input type="number" class="productCant">
+                                <button>Agregar</button>
+                            </div>
+                            <h4>Anis Cartujo</h4>
+                            <h5>Desde 0.00$</h3>
+                        </li>
+                    </ul>
             </section>
             <section>
-                <h3></h3>
-                <div></div>
+                <h3 id="subtitle">Ron</h3>
+                <ul id="productSection">
+                    <li>
+                        <div id="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                    <li>
+                        <div id="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                    <li>
+                        <div id="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                    <li>
+                        <div id="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                    <li>
+                        <div id="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                </ul>
             </section>
             <section>
-                <h3></h3>
-                <div></div>
+                <h3 id="subtitle">Whisky</h3>
+                <ul id="productSection">
+                    <li>
+                        <div id="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                    <li>
+                        <div id="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                    <li>
+                        <div id="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                    <li>
+                        <div id="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                    <li>
+                        <div id="productView">
+                            <input type="number" class="productCant">
+                            <button>Agregar</button>
+                        </div>
+                        <h4>Anis Cartujo</h4>
+                        <h5>Desde 0.00$</h3>
+                    </li>
+                </ul>
             </section>
+            <div id="space"></div>
         </div>
     </main>
 
