--- a/src/layouts/Landing/content.css
+++ b/src/layouts/Landing/content.css
@@ -405,3 +405,82 @@ footer section section div{
     width: 3vmin;
     height: 3vmin;
 }
+
+
+#productSection{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+#productSection li{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1vmin;
+}
+
+#productSection li h4, #productSection li h5{
+    height: 2vmin;
+    margin: 0;
+    font-weight: normal;
+    cursor: pointer;
+}
+
+#subtitle{
+    padding-left: 5vmin;
+    font-weight: normal;
+    color: var(--blue);
+}
+
+#productView{
+    background-image: url(../../../public/images/Licores/anis-cartujo.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 20vmin;
+    width: 15vmin;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1vmin;
+}
+
+#productView input[type=number]{
+    width: 5vmin;
+    height: 5vmin;
+    font-size: 2vmin;
+    opacity: 0;
+    transition: opacity 0.3s linear;
+}
+
+#productView input[type=number]::-webkit-inner-spin-button{
+    opacity: 1;
+    scale: 1.3;
+}
+
+#productView:hover input[type=number]{
+    opacity: 1;
+}
+
+#productView button{
+    width: 8vmin;
+    height: 4vmin;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    border: none;
+    cursor: pointer;
+    color: var(--white);
+    background-color: var(--blue);
+    opacity: 0;
+    transition: opacity 0.3s linear;
+}
+
+#productView:hover button{
+    opacity: 1;
+}
